--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,13 @@
   "name": "kannan-autos-server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "repository": "https://github.com/arpankumarde/kannan-autos",
   "author": "arpankumarde <134305585+arpankumarde@users.noreply.github.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
